--- a/config/hydra/optimizer/roots/protein_seq.yaml
+++ b/config/hydra/optimizer/roots/protein_seq.yaml
@@ -2,6 +2,10 @@ protein_seq:
   _target_: cortex.model.root.Conv1dRoot
   corruption_process:
     _target_: cortex.corruption.MaskCorruptionProcess
+    t_base_dist:
+      _target_: torch.distributions.Beta
+      concentration1: 3
+      concentration0: 1
   tokenizer_transform:
     _target_: cortex.transforms.HuggingFaceTokenizerTransform
     tokenizer:
